# weechat-1

./: CMakeLists.txt  configure.ac  weechat.cygport.in
cmake/: FindDBus.cmake
debian/: weechat-plugins.install
doc/: docgen.py
po/: POTFILES.in
src/plugins/: CMakeLists.txt  Makefile.am
src/plugins/dbus/: CMakeLists.txt  Makefile.am  dbus-argument.c  dbus-argument.h  dbus-infolist.c  dbus-infolist.h  dbus-interface.c  dbus-interface.h  dbus-interfaces-buffer.c  dbus-interfaces-buffer.h  dbus-interfaces-introspectable.c  dbus-interfaces-introspectable.h  dbus-interfaces-object-manager.c  dbus-interfaces-object-manager.h  dbus-interfaces-peer.c  dbus-interfaces-peer.h  dbus-interfaces-properties.c  dbus-interfaces-properties.h  dbus-mainloop.c  dbus-mainloop.h  dbus-method.c  dbus-method.h  dbus-methods-core.c  dbus-methods-core.h  dbus-object-factory.c  dbus-object-factory.h  dbus-object.c  dbus-object.h  dbus-property.c  dbus-property.h  dbus-signal.c  dbus-signal.h  dbus-strings.c  dbus-strings.h  dbus.c  dbus.h
src/plugins/irc/: irc-config.c  irc-mode.c  irc-protocol.c  irc-server.c  irc-server.h
